<resources>
    <string name="app_name">E-book Store</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_ebook">Cadastrar E-Book</string>
    <string name="title_activity_main">E-Book Store</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_ebook">Novo</string>
    <string name="title_romance">Romances</string>
    <string name="title_negocios">Negócios</string>
    <string name="title_tecnicos">Técnicos</string>
    <string name="item_book_title">Título:</string>
    <string name="item_book_genero">Gênero:</string>
    <string name="item_book_isbn">ISBN:</string>
    <string name="item_book_resume">Resumo:</string>
    <string name="item_book_authors">Autores:</string>
    <string name="item_book_descriptionimage">Cover book</string>
    <string name="title">Título:</string>
</resources>
