<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_romances"
        android:icon="@drawable/ic_movie_filter_black_24dp"
        android:title="@string/title_romance" />

    <item
        android:id="@+id/navigation_negocios"
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/title_negocios" />

    <item
        android:id="@+id/navigation_tecnicos"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_tecnicos" />

    <item
        android:id="@+id/navigation_ebook"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/title_ebook" />

</menu>
